finish version mobile and desktop

--- a/index.html
+++ b/index.html
@@ -271,34 +271,46 @@
           <div class="activity-list">
             <div class="column">
               <picture>
-                <img src="images/activites/4_small/Vieux port.jpg">
-                <h3>Vieux Port</h3>
+                <a href="#">
+                  <img src="images/activites/4_small/Vieux port.jpg">
+                  <h3>Vieux Port</h3>
+                </a>
               </picture>
             </div>
             <div class="column double">
               <picture id="medium-picture">
-                <img src="images/activites/4_small/Fort de Pomègue.jpg">
-                <h3>Fort de Pomègues</h3>
+                <a href="#">
+                  <img src="images/activites/4_small/Fort de Pomègue.jpg">
+                  <h3>Fort de Pomègues</h3>
+                </a>
               </picture>
               <picture id="small-picture">
-                <img src="images/activites/4_small/îles du Frioul.jpg">
-                <h3>Îles du Frioul</h3>
+                <a href="#">
+                  <img src="images/activites/4_small/îles du Frioul.jpg">
+                  <h3>Îles du Frioul</h3>
+                </a>
               </picture>
             </div>
             <div class="column">
-                <picture>
-                    <img src="images/activites/4_small/Parc National des calanques.jpg">
-                    <h3>Parc National des Calanques</h3>
-                </picture>
+              <picture>
+                <a href="#">
+                  <img src="images/activites/4_small/Parc National des calanques.jpg">
+                  <h3>Parc National des Calanques</h3>
+                </a>
+              </picture>
             </div>
             <div class="column double">
               <picture>
-                <img src="images/activites/4_small/Notre Dame de la Garde.jpg">
-                <h3>Notre-Dame-de-la-Garde</h3>
+                <a href="#">
+                  <img src="images/activites/4_small/Notre Dame de la Garde.jpg">
+                  <h3>Notre-Dame-de-la-Garde</h3>
+                </a>
               </picture>
               <picture>
-                <img src="images/activites/4_small/Parc Longchamp.jpg">
-                <h3>Parc LongChamp</h3>
+                <a href="#">
+                  <img src="images/activites/4_small/Parc Longchamp.jpg">
+                  <h3>Parc LongChamp</h3>
+                </a>
               </picture>
             </div>
           </div>
@@ -311,18 +323,18 @@
       <section class="ment-container">
         <div class="container-footer">
           <ul class="mentions">
-            <li><h3 class="footer-title">A propos</h3></li>
+            <h3 class="footer-title">A propos</h3>
             <li>Fontionnement du site</li>
-            <li>Conditions générales de ventes</li>
+            <li>Conditions générales de vente</li>
             <li>Données et confidentialité</li>
           </ul>
           <ul class="mentions">
-            <li><h3 class="footer-title">Nos herbergements</h3></li>
+            <h3 class="footer-title">Nos hébergements</h3>
             <li>Charte qualité</li>
-            <li>Soumettre votre Hôtel</li>
+            <li>Soumettre votre hôtel</li>
           </ul>
           <ul class="mentions">
-            <li><h3 class="footer-title">Assistance</h3></li>
+            <h3 class="footer-title">Assistance</h3>
             <li>Centre d'aide</li>
             <li>Nous contacter</li>
           </ul>
