fixe W3C errors , activity section break small-card and mobile version

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta description="site web booki.com" content="Site de réservation location en ligne">
+    <!-- <meta description="site web booki.com" content="Site de réservation location en ligne"> -->
     <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <link rel="stylesheet" type="text/css" href="css/header.css"/>
@@ -81,6 +82,7 @@
             </span>
             <a class="filter-btn" href="#"> Animaux autorisés </a>
           </div>
+        </div>
       </header>
     
       <!-- sub-information -->
@@ -103,7 +105,7 @@
             <div class="heb-card">
               <a href="#">
                 <div class="img-heb">
-                  <img src="images/hebergements/4_small/Auberge La cannebière.jpg" alt="Auberge la cannebière">
+                  <img src="images/hebergements/4_small/Auberge_La_cannebière.jpg" alt="Auberge la cannebière">
                 </div>
                 <div class="heb-description">
                   <h2>Auberge la cannebière</h2>
@@ -119,7 +121,7 @@
             <div class="heb-card">
               <a href="#">
                 <div class="img-heb">
-                  <img src="images/hebergements/4_small/Hotel du port.jpg" alt="Hôtel du port">
+                  <img src="images/hebergements/4_small/Hotel_du_port.jpg" alt="Hôtel du port">
                 </div>
                 <div class="heb-description">
                   <h2>Hôtel du port</h2>
@@ -135,7 +137,7 @@
             <div class="heb-card">
               <a href="#">
                 <div class="img-heb">
-                  <img src="images/hebergements/4_small/Hotel les mouettes.jpg" alt="Hôtel les mouettes">
+                  <img src="images/hebergements/4_small/Hotel_les_mouettes.jpg" alt="Hôtel les mouettes">
                 </div>
                 <div class="heb-description">
                   <h2>Hôtel les mouettes</h2>
@@ -151,7 +153,7 @@
             <div class="heb-card">
               <a href="#">
                 <div class="img-heb">
-                  <img src="images/hebergements/4_small/Hotel de la mer.jpg" alt="Hôtel de la mer">
+                  <img src="images/hebergements/4_small/Hotel_de_la_mer.jpg" alt="Hôtel de la mer">
                 </div>
                 <div class="heb-description">
                   <h2>Hôtel de la mer</h2>
@@ -167,7 +169,7 @@
             <div class="heb-card">
               <a href="#">
                 <div class="img-heb">
-                  <img src="images/hebergements/4_small/Auberge Le Panier.jpg" alt="Auberge Le Panier">
+                  <img src="images/hebergements/4_small/Auberge_Le_Panier.jpg" alt="Auberge Le Panier">
                 </div>
                 <div class="heb-description">
                   <h2>Auberge le panier</h2>
@@ -183,7 +185,7 @@
             <div class="heb-card">
               <a href="#">
                 <div class="img-heb">
-                  <img src="images/hebergements/4_small/Hotel chez Amina.jpg" alt="Hôtel chez Amina">
+                  <img src="images/hebergements/4_small/Hotel_chez_Amina.jpg" alt="Hôtel chez Amina">
                 </div>
                 <div class="heb-description">
                   <h2>Hôtel chez Amina</h2>
@@ -211,7 +213,7 @@
             <div class="pop-div">
               <a href="#">
                 <div class="pop-img">
-                  <img src="images/hebergements/4_small/Hotel Le soleil du matin.jpg" alt="Hôtel Le soleil du matin">
+                  <img src="images/hebergements/4_small/Hotel_Le_soleil_du_matin.jpg" alt="Hôtel Le soleil du matin">
                 </div>
                 <div class="pop-description">
                   <h2>Hôtel Le soleil du matin</h2>
@@ -229,7 +231,7 @@
             <div class="pop-div">
               <a href="#">
                 <div class="pop-img">
-                  <img src="images/hebergements/4_small/Au coeur de l'eau.jpg" alt="Au coeur de l'eau Chambresd'hôtes">
+                  <img src="images/hebergements/4_small/Au_coeur_de_l'eau.jpg" alt="Au coeur de l'eau Chambresd'hôtes">
                 </div>
                 <div class="pop-description">
                   <h2>Au coeur de l'eau Chambres d'hôtes</h2>
@@ -247,7 +249,7 @@
             <div class="pop-div">
               <a href="#">
                 <div class="pop-img">
-                  <img src="images/hebergements/4_small/Hotel tout bleu et blanc.jpg" alt="Hôtel Tout bleu et Blanc">
+                  <img src="images/hebergements/4_small/Hotel_tout_bleu_et_blanc.jpg" alt="Hôtel Tout bleu et Blanc">
                 </div>
                 <div class="pop-description">
                   <h2>Hôtel Tout bleu et Blanc</h2>
@@ -270,48 +272,48 @@
         <section class="act-container">
           <div class="activity-list">
             <div class="column">
-              <picture>
-                <a href="#">
-                  <img src="images/activites/4_small/Vieux port.jpg">
-                  <h3>Vieux Port</h3>
-                </a>
-              </picture>
+              <a href="#">
+                <picture>
+                  <img src="images/activites/4_small/Vieux_port.jpg" alt="Vieux port">
+                </picture>
+                <h3>Vieux Port</h3>
+              </a>
             </div>
             <div class="column double">
-              <picture id="medium-picture">
-                <a href="#">
-                  <img src="images/activites/4_small/Fort de Pomègue.jpg">
-                  <h3>Fort de Pomègues</h3>
-                </a>
-              </picture>
-              <picture id="small-picture">
-                <a href="#">
-                  <img src="images/activites/4_small/îles du Frioul.jpg">
-                  <h3>Îles du Frioul</h3>
-                </a>
-              </picture>
+              <a href="#">
+                <picture class="medium-picture">
+                  <img src="images/activites/4_small/Fort_de_Pomègue.jpg" alt="Fort de Pomègue">
+                </picture>
+                <h3>Fort de Pomègues</h3>
+              </a>
+              <a href="#">
+                <picture class="small-picture">
+                  <img src="images/activites/4_small/îles_du_Frioul.jpg" alt="île de Frioul">
+                </picture>
+                <h3>Îles du Frioul</h3>
+              </a>
             </div>
             <div class="column">
-              <picture>
-                <a href="#">
-                  <img src="images/activites/4_small/Parc National des calanques.jpg">
-                  <h3>Parc National des Calanques</h3>
-                </a>
-              </picture>
+              <a href="#">
+                <picture>
+                  <img src="images/activites/4_small/Parc_National_des_calanques.jpg" alt="Parc National des Calanques ">
+                </picture>
+                <h3>Parc National des Calanques</h3>
+              </a>
             </div>
             <div class="column double">
-              <picture>
-                <a href="#">
-                  <img src="images/activites/4_small/Notre Dame de la Garde.jpg">
-                  <h3>Notre-Dame-de-la-Garde</h3>
-                </a>
-              </picture>
-              <picture>
-                <a href="#">
-                  <img src="images/activites/4_small/Parc Longchamp.jpg">
-                  <h3>Parc LongChamp</h3>
-                </a>
-              </picture>
+              <a href="#">
+                <picture>
+                  <img src="images/activites/4_small/Notre_Dame_de_la_Garde.jpg" alt="Notre-Dame-de-la-Garde">
+                </picture>
+                <h3>Notre-Dame-de-la-Garde</h3>
+              </a>
+              <a href="#">
+                <picture>
+                  <img src="images/activites/4_small/Parc_Longchamp.jpg" alt="Parc Longchamp">
+                </picture>
+                <h3>Parc LongChamp</h3>
+              </a>
             </div>
           </div>
         </section>
@@ -323,18 +325,18 @@
       <section class="ment-container">
         <div class="container-footer">
           <ul class="mentions">
-            <h3 class="footer-title">A propos</h3>
+            <li><h3 class="footer-title">A propos</h3></li>
             <li>Fontionnement du site</li>
             <li>Conditions générales de vente</li>
             <li>Données et confidentialité</li>
           </ul>
           <ul class="mentions">
-            <h3 class="footer-title">Nos hébergements</h3>
+            <li><h3 class="footer-title">Nos hébergements</h3></li> 
             <li>Charte qualité</li>
             <li>Soumettre votre hôtel</li>
           </ul>
           <ul class="mentions">
-            <h3 class="footer-title">Assistance</h3>
+            <li><h3 class="footer-title">Assistance</h3></li>
             <li>Centre d'aide</li>
             <li>Nous contacter</li>
           </ul>
