--- a/index.html
+++ b/index.html
@@ -280,14 +280,14 @@
               </a>
             </div>
             <div class="column double">
-              <a href="#">
-                <picture class="medium-picture">
+              <a href="#" id="medium-picture">
+                <picture >
                   <img src="images/activites/4_small/Fort_de_Pomègue.jpg" alt="Fort de Pomègue">
                 </picture>
                 <h3>Fort de Pomègues</h3>
               </a>
-              <a href="#">
-                <picture class="small-picture">
+              <a href="#" id="small-picture">
+                <picture >
                   <img src="images/activites/4_small/îles_du_Frioul.jpg" alt="île de Frioul">
                 </picture>
                 <h3>Îles du Frioul</h3>
