exam validation W3C for HTML and CSS

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="nav-logo"><img src="images/logo/Booki@3x.png" alt="logo booki"></div>
           <nav>
             <ul>
-              <li class="active"><a href="#hebergement" class="navlink__heb">Hébergements</a></li>
-              <li><a href="#activity" class="navlink__act">Activités</a></li>
+              <li><a href="#hebergement" class="active">Hébergements</a></li>
+              <li><a href="#activity">Activités</a></li>
             </ul>
           </nav>  
         </div>
