--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- <meta description="site web booki.com" content="Site de réservation location en ligne"> -->
     <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <link rel="stylesheet" type="text/css" href="css/header.css"/>
@@ -157,7 +156,7 @@
                 </div>
                 <div class="heb-description">
                   <h2>Hôtel de la mer</h2>
-                  <p>Nuit à partir de <strong> 46 €</strong></p>
+                  <p>Nuit à partir de <strong> 46€</strong></p>
                   <span class="star"><i class="fas fa-star"></i></span>
                   <span class="star"><i class="fas fa-star"></i></span>
                   <span class="star"><i class="fas fa-star"></i></span>
@@ -322,7 +321,7 @@
 
     <!-- footer -->
     <footer>
-      <section class="ment-container">
+      <section>
         <div class="container-footer">
           <ul class="mentions">
             <li><h3 class="footer-title">A propos</h3></li>
