--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   <img src="images/hebergements/4_small/Auberge_La_cannebière.jpg" alt="Auberge la cannebière">
                 </div>
                 <div class="heb-description">
-                  <h2>Auberge la cannebière</h2>
+                  <h2>Auberge la Cannebière</h2>
                   <p>Nuit à partir de <strong>25€</strong></p>
                   <span class="star"><i class="fas fa-star"></i></span>
                   <span class="star"><i class="fas fa-star"></i></span>
@@ -139,7 +139,7 @@
                   <img src="images/hebergements/4_small/Hotel_les_mouettes.jpg" alt="Hôtel les mouettes">
                 </div>
                 <div class="heb-description">
-                  <h2>Hôtel les mouettes</h2>
+                  <h2>Hôtel Les mouettes</h2>
                   <p>Nuit à partir de <strong>76€</strong></p>
                   <span class="star"><i class="fas fa-star"></i></span>
                   <span class="star"><i class="fas fa-star"></i></span>
@@ -156,7 +156,7 @@
                 </div>
                 <div class="heb-description">
                   <h2>Hôtel de la mer</h2>
-                  <p>Nuit à partir de <strong> 46€</strong></p>
+                  <p>Nuit à partir de <strong>46€</strong></p>
                   <span class="star"><i class="fas fa-star"></i></span>
                   <span class="star"><i class="fas fa-star"></i></span>
                   <span class="star"><i class="fas fa-star"></i></span>
@@ -171,7 +171,7 @@
                   <img src="images/hebergements/4_small/Auberge_Le_Panier.jpg" alt="Auberge Le Panier">
                 </div>
                 <div class="heb-description">
-                  <h2>Auberge le panier</h2>
+                  <h2>Auberge Le Panier</h2>
                   <p>Nuit à partir de <strong>23€</strong></p>
                   <span class="star"><i class="fas fa-star"></i></span>
                   <span class="star"><i class="fas fa-star"></i></span>
@@ -311,7 +311,7 @@
                 <picture>
                   <img src="images/activites/4_small/Parc_Longchamp.jpg" alt="Parc Longchamp">
                 </picture>
-                <h3>Parc LongChamp</h3>
+                <h3>Parc Longchamp</h3>
               </a>
             </div>
           </div>
