add img src and responsive design

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
               </a>
             </div>   
             <div class="heb-link">
-              <p>Afficher plus</p>
+              <a href="#">Afficher plus</a>
             </div>            
           </article>
 
@@ -273,21 +273,39 @@
             <div class="column">
               <a href="#">
                 <picture>
-                  <img src="images/activites/4_small/Vieux_port.jpg" alt="Vieux port">
+                  <source media="(max-width: 767px)"
+                    srcset="images/activites/4_small/Vieux_port.jpg"
+                    type="image/jpg">
+                  <source media="(max-width: 992px)"
+                    srcset="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                    type="image/jpg">
+                    <img src="images/activites/4_small/Vieux_port.jpg" alt="Vieux Port" />
                 </picture>
                 <h3>Vieux Port</h3>
               </a>
             </div>
             <div class="column double">
-              <a href="#" id="medium-picture">
-                <picture >
-                  <img src="images/activites/4_small/Fort_de_Pomègue.jpg" alt="Fort de Pomègue">
+              <a href="#"id="medium-picture">
+                <picture>
+                  <source media="(max-width: 767px)"
+                    srcset="images/activites/4_small/Fort_de_Pomègue.jpg"
+                    type="image/jpg">
+                  <source media="(max-width: 992px)"
+                    srcset="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                    type="image/jpg">
+                    <img src="images/activites/4_small/Fort_de_Pomègue.jpg"  alt="Fort de Pomègue" />
                 </picture>
                 <h3>Fort de Pomègues</h3>
               </a>
               <a href="#" id="small-picture">
-                <picture >
-                  <img src="images/activites/4_small/îles_du_Frioul.jpg" alt="île de Frioul">
+                <picture>
+                  <source media="(max-width: 767px)"
+                    srcset="images/activites/4_small/îles_du_Frioul.jpg"
+                    type="image/jpg">
+                  <source media="(max-width: 992px)"
+                    srcset="images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                    type="image/jpg">
+                    <img src="images/activites/4_small/îles_du_Frioul.jpg" alt="île de Frioul">                  
                 </picture>
                 <h3>Îles du Frioul</h3>
               </a>
@@ -295,7 +313,13 @@
             <div class="column">
               <a href="#">
                 <picture>
-                  <img src="images/activites/4_small/Parc_National_des_calanques.jpg" alt="Parc National des Calanques ">
+                  <source media="(max-width: 767px)"
+                    srcset="images/activites/4_small/Parc_National_des_calanques.jpg"
+                    type="image/jpg">
+                  <source media="(max-width: 992px)"
+                    srcset="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                    type="image/jpg">
+                    <img src="images/activites/4_small/Parc_National_des_calanques.jpg" alt="Parc National des Calanques ">
                 </picture>
                 <h3>Parc National des Calanques</h3>
               </a>
@@ -303,13 +327,25 @@
             <div class="column double">
               <a href="#">
                 <picture>
-                  <img src="images/activites/4_small/Notre_Dame_de_la_Garde.jpg" alt="Notre-Dame-de-la-Garde">
+                  <source media="(max-width: 767px)"
+                    srcset="images/activites/4_small/Notre_Dame_de_la_Garde.jpg"
+                    type="image/jpg">
+                  <source media="(max-width: 992px)"
+                    srcset="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                    type="image/jpg">
+                    <img src="images/activites/4_small/Notre_Dame_de_la_Garde.jpg" alt="Notre-Dame-de-la-Garde">
                 </picture>
                 <h3>Notre-Dame-de-la-Garde</h3>
               </a>
               <a href="#">
                 <picture>
-                  <img src="images/activites/4_small/Parc_Longchamp.jpg" alt="Parc Longchamp">
+                  <source media="(max-width: 767px)"
+                    srcset="images/activites/4_small/Parc_Longchamp.jpg"
+                    type="image/jpg">
+                  <source media="(max-width: 992px)"
+                    srcset="images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                    type="image/jpg">
+                    <img src="images/activites/4_small/Parc_Longchamp.jpg" alt="Parc Longchamp">
                 </picture>
                 <h3>Parc Longchamp</h3>
               </a>
@@ -325,19 +361,19 @@
         <div class="container-footer">
           <ul class="mentions">
             <li><h3 class="footer-title">A propos</h3></li>
-            <li>Fontionnement du site</li>
-            <li>Conditions générales de vente</li>
-            <li>Données et confidentialité</li>
+            <li><a href="#">Fontionnement du site</a></li>
+            <li><a href="#">Conditions générales de vente</a></li>
+            <li><a href="#">Données et confidentialité</a></li>
           </ul>
           <ul class="mentions">
             <li><h3 class="footer-title">Nos hébergements</h3></li> 
-            <li>Charte qualité</li>
-            <li>Soumettre votre hôtel</li>
+            <li><a href="#">Charte qualité</a></li>
+            <li><a href="#">Soumettre votre hôtel</a></li>
           </ul>
           <ul class="mentions">
             <li><h3 class="footer-title">Assistance</h3></li>
-            <li>Centre d'aide</li>
-            <li>Nous contacter</li>
+            <li><a href="#">Centre d'aide</a></li>
+            <li><a href="#">Nous contacter</a></li>
           </ul>
         </div>    
       </section>
